--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -64,7 +64,7 @@ jobs:
 
   tomcat-deploy:
     runs-on: ubuntu-latest
-    needs: nexus-deploy
+    needs: sonar
     steps:
       - name: Download WAR
         uses: actions/download-artifact@v4
