--- a/.github/workflows/cicd1.yaml
+++ b/.github/workflows/cicd1.yaml
@@ -1,4 +1,4 @@
-name: CICD Pipeline 1
+name: CICD Pipeline 2
 
 on:
   workflow_dispatch:
@@ -9,43 +9,79 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+
     - name: install maven 
       run: |
        sudo apt update
        sudo apt install maven -y
+
     - name: Build with Maven
       run: mvn compile
-      
-  security-check:
+
+
+  sonarqube:
     runs-on: self-hosted
     needs: compile
 
     steps:
     - uses: actions/checkout@v4
-    - name: Trivy Installation
-      run: |
-       wget https://github.com/aquasecurity/trivy/releases/download/v0.67.2/trivy_0.67.2_Linux-64bit.deb
-       sudo dpkg -i trivy_0.67.2_Linux-64bit.deb
-       trivy --version
-    - name: Trivy FS Scan
-      run: trivy fs --format table -o fs-report.json .
-  testing:
-    runs-on: self-hosted
-    needs: security-check
-    steps:
-    - uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+
+    - name: SonarQube Analysis
+      env:
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+      run: |
+        mvn -B verify sonar:sonar \
+          -Dsonar.host.url=$SONAR_HOST_URL \
+          -Dsonar.login=$SONAR_TOKEN \
+          -Dsonar.projectKey=$SONAR_PROJECT_KEY
+
+
+  security-check:
+    runs-on: self-hosted
+    needs: sonarqube
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Trivy Installation
+      run: |
+       wget https://github.com/aquasecurity/trivy/releases/download/v0.67.2/trivy_0.67.2_Linux-64bit.deb
+       sudo dpkg -i trivy_0.67.2_Linux-64bit.deb
+       trivy --version
+
+    - name: Trivy FS Scan
+      run: trivy fs --format table -o fs-report.json .
+
+
+  testing:
+    runs-on: self-hosted
+    needs: security-check
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+
     - name: testing
       run: mvn test
-
