--- a/.github/workflows/cicd3.yaml
+++ b/.github/workflows/cicd3.yaml
@@ -27,16 +27,22 @@ jobs:
 
 
   sonarqube:
-    runs-on: self-hosted
-    needs: compile
-    steps:
-    - uses: actions/checkout@v4
+     runs-on: self-hosted
+     needs: compile
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
+     steps:
+     - uses: actions/checkout@v4
 
-    - name: SonarQube Analysis
-      run: mvn sonar:sonar
+     - name: Set up JDK 17
+       uses: actions/setup-java@v4
+       with:
+         java-version: '17'
+         distribution: 'temurin'
+         cache: maven
+
+     - name: SonarQube Analysis
+       run: |
+         mvn sonar:sonar
 
 
 
