--- a/.github/workflows/cicd3.yaml
+++ b/.github/workflows/cicd3.yaml
@@ -65,15 +65,19 @@ jobs:
   testing:
     runs-on: self-hosted
     needs: security-check
+
     steps:
     - uses: actions/checkout@v4
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
 
-    - name: Java Tests
+    - name: testing
       run: mvn test
-
 
 
   docker-build:
