--- a/.github/workflows/cicd3.yaml
+++ b/.github/workflows/cicd3.yaml
@@ -23,7 +23,7 @@ jobs:
           sudo apt install maven -y
 
       - name: Build with Maven
-        run: mvn -B compile
+        run: mvn -B clean package
 
 
 
@@ -61,27 +61,10 @@ jobs:
 
 
 
-  testing:
-    runs-on: self-hosted
-    needs: security-check
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
-
-      - name: testing
-        run: mvn clean package
-
 
 
   docker-build:
     runs-on: self-hosted
-    needs: testing
     steps:
       - uses: actions/checkout@v4
 
