--- a/.github/workflows/cicd3.yaml
+++ b/.github/workflows/cicd3.yaml
@@ -67,7 +67,7 @@ jobs:
     runs-on: self-hosted
     needs: security-check
     steps:
-      - uses: actions/checkout@v4
+     # - uses: actions/checkout@v4
 
       - name: Build Docker Image
         run: |
