--- a/.github/workflows/cicd3.yaml
+++ b/.github/workflows/cicd3.yaml
@@ -31,14 +31,14 @@ jobs:
     runs-on: self-hosted
     needs: compile
     steps:
-      - uses: actions/checkout@v4
+     # - uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
+     # - name: Set up JDK 17
+       # uses: actions/setup-java@v4
+        #with:
+         # java-version: '17'
+          #distribution: 'temurin'
+          #cache: maven
 
       - name: SonarQube Analysis
         run: mvn sonar:sonar
@@ -49,7 +49,7 @@ jobs:
     runs-on: self-hosted
     needs: sonarqube
     steps:
-      - uses: actions/checkout@v4
+      #- uses: actions/checkout@v4
 
       - name: Install Trivy
         run: |
