--- a/.github/workflows/cicd3.yaml
+++ b/.github/workflows/cicd3.yaml
@@ -71,7 +71,11 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t ${{ secrets.Docker_Repository }}:${{ github.sha }} .
+          docker build -t ${{ secrets.Docker_Repository }}:${{ github.sha }}
+      - name: Push images to Docker Hub
+        run: |
+          docker push ${{ secrets.Docker_Repository }}:${{ github.sha }}
+          docker push ${{ secrets.Docker_Repository }}:latest .
 
 
 
