--- a/.github/workflows/cicd3.yaml
+++ b/.github/workflows/cicd3.yaml
@@ -72,10 +72,11 @@ jobs:
       - name: Build Docker Image
         run: |
           docker build -t ${{ secrets.Docker_Repository }}:${{ github.sha }}
-      - name: Push images to Docker Hub
-        run: |
-          docker push ${{ secrets.Docker_Repository }}:${{ github.sha }}
-          docker push ${{ secrets.Docker_Repository }}:latest .
+     
+      # - name: Push images to Docker Hub
+      #   run: |
+      #     docker push ${{ secrets.Docker_Repository }}:${{ github.sha }}
+      #     docker push ${{ secrets.Docker_Repository }}:latest .
 
 
 
@@ -95,6 +96,7 @@ jobs:
         run: |
           kubectl set image deployment/javawebappdep \
             javawebapp=${{ secrets.Docker_Repository }}:${{ github.sha }}
+
 
       - name: Verify rollout
         run: kubectl rollout status deployment/javawebappdep
