--- a/.github/workflows/cicd3.yaml
+++ b/.github/workflows/cicd3.yaml
@@ -76,7 +76,7 @@ jobs:
       - name: Push images to Docker Hub
         run: |
           docker push ${{ secrets.Docker_Repository }}:${{ github.sha }}
-          docker push ${{ secrets.Docker_Repository }}:latest 
+        # docker push ${{ secrets.Docker_Repository }}:latest 
 
 
 
